--- a/polygondex/package.json
+++ b/polygondex/package.json
@@ -3,11 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
+    "@material-ui/x-grid": "^4.0.0-alpha.33",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "inversify-hooks": "^2.1.6",
+    "jshint": "^2.13.1",
+    "moralis": "^0.0.28",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moralis": "^0.1.9",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
