--- a/polygondex/package.json
+++ b/polygondex/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "font-awesome": "^4.7.0",
     "inversify-hooks": "^2.1.6",
     "jshint": "^2.13.1",
     "moralis": "^0.0.28",
