--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "polygondex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://polygondex.github.io/ka-blamo",
+  "homepage": "http://polygondex.github.io/ka-blamo/public/index.html",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
