--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "font-awesome": "^4.7.0",
     "inversify-hooks": "^2.1.6",
     "jshint": "^2.13.1",
+    "moment": "^2.29.1",
     "moralis": "^0.0.28",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
