--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "anychart-react": "^1.4.1",
     "axios": "^0.21.1",
     "font-awesome": "^4.7.0",
     "inversify-hooks": "^2.1.6",
